Changes to the product page

--- a/styles/product.css
+++ b/styles/product.css
@@ -1,3 +1,11 @@
+body {
+  background: url(../images/spacemountain.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+}
+
+
 .container {
   max-width: 960px;
 }
@@ -7,12 +15,12 @@
  */
 
 .site-header {
-  background-color: rgba(0, 0, 0, .85);
+  background-color: rgba(52, 58, 64, .85);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px);
 }
 .site-header a {
-  color: #999;
+  color: rgba(52, 58, 64, .85);
   transition: ease-in-out color .15s;
 }
 .site-header a:hover {
