--- a/styles/product.css
+++ b/styles/product.css
@@ -5,6 +5,11 @@ body {
   -o-background-size: cover;
 }
 
+.inner{
+  max-width: 42em;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .container {
   max-width: 960px;
@@ -29,40 +34,39 @@ body {
 }
 
 /*
- * Dummy devices (replace them with your own or something else entirely!)
+ * Header
  */
-
-.product-device {
-  position: absolute;
-  right: 10%;
-  bottom: -30%;
-  width: 300px;
-  height: 540px;
-  background-color: #333;
-  border-radius: 21px;
-  -webkit-transform: rotate(30deg);
-  transform: rotate(30deg);
+.masthead {
+  margin-bottom: 2rem;
 }
 
-.product-device::before {
-  position: absolute;
-  top: 10%;
-  right: 10px;
-  bottom: 10%;
-  left: 10px;
-  content: "";
-  background-color: rgba(255, 255, 255, .1);
-  border-radius: 5px;
+.masthead-brand {
+  margin-bottom: 0;
+  float: left;
 }
 
-.product-device-2 {
-  top: -25%;
-  right: auto;
-  bottom: 0;
-  left: 5%;
-  background-color: #e5e5e5;
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, .5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+  float: right;
 }
 
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
 
 /*
  * Extra utilities
