--- a/styles/edit_products.css
+++ b/styles/edit_products.css
@@ -5,26 +5,18 @@ body {
   -o-background-size: cover;
 }
 
-h1 {
-  color: #ebebeb;
-}
-
-h2 {
-  color: #ebebeb;
-}
-
-h3 {
-  color: #ebebeb;
-}
-
-h4 {
-  color: #ebebeb;
+button {
+  margin: 15px;
 }
 
 .inner{
   max-width: 42em;
   margin-left: auto;
   margin-right: auto;
+}
+
+h1 {
+  margin:30px;
 }
 
 /*
@@ -79,18 +71,3 @@ h4 {
   color: #fff;
   border-bottom-color: #fff;
 }
-
-.label-light {
-  color: #ebebeb;
-}
-
-.text-light {
-  color: #ebebeb;
-}
-
-
-.container {
-  max-width: 960px;
-}
-
-.lh-condensed { line-height: 1.25; }
